tests/models/struct/unnamed/f64/fail/alias.rs
use dade::model;
#[model]
struct TestModel (
   #[field(alias = "val")]
    f64
);
fn main() {}
